syntax = "proto3";
package protobufs.services.match.v1;
import "common/v1/match.proto";

// Match service
service MatchService {
    // Gets list of match id's in the db for a player based on game name and tag line
    rpc GetMatchList(GetMatchListRequest) returns (GetMatchListResponse) {}

    // Gets data for a specific match based on the match id in the db
    rpc GetMatchData(GetMatchDataRequest) returns (GetMatchDataResponse) {}

    // Adds match to db
    rpc StoreMatch(StoreMatchRequest) returns (StoreMatchResponse) {}

    // Deletes match from db
    rpc DeleteMatch(DeleteMatchRequest) returns (DeleteMatchResponse) {}

}

message GetMatchListRequest {
    string game_name = 1;
    string tag_line = 2;
}

message GetMatchListResponse {
    repeated string match_id = 1;
}

message GetMatchDataRequest {
    string match_id = 1;
}

message GetMatchDataResponse {
    common.v1.Match match = 1;
}

message StoreMatchRequest {
    common.v1.Match match = 1;
}

message StoreMatchResponse {
    bool success = 1;
}

message DeleteMatchRequest {
    string match_id = 1;
}

message DeleteMatchResponse {
    bool success = 1;
}
